Add skeleton for class representing guests.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,7 +20,7 @@ AM_CFLAGS =\
 bin_PROGRAMS = tabler
 
 tabler_SOURCES = \
-	tabler.vala config.vapi table.vala
+	tabler.vala config.vapi table.vala guest.vala
 
 tabler_VALAFLAGS =  \
 	--pkg gtk+-3.0
