Add skeleton for a class representing a room.

--- a/configure.ac
+++ b/configure.ac
@@ -19,7 +19,7 @@ dnl Check for vala
 AM_PROG_VALAC([0.10.0])
 
 
-PKG_CHECK_MODULES(TABLER, [gtk+-3.0 ])
+PKG_CHECK_MODULES(TABLER, [gtk+-3.0 gee-1.0])
 
 
 AC_OUTPUT([
