Added application launcher.

--- a/configure.ac
+++ b/configure.ac
@@ -33,6 +33,9 @@ PKG_CHECK_MODULES(TABLER, [gtk+-3.0 gee-1.0 libxml-2.0 gio-2.0])
 
 AC_OUTPUT([
 Makefile
+data/Makefile
+data/tabler.desktop.in
 src/Makefile
 po/Makefile.in
 ])
+
