Fix desktop file to validate with desktop-file-validate.

--- a/data/tabler.desktop.in.in
+++ b/data/tabler.desktop.in.in
@@ -7,7 +7,7 @@ Icon=tabler
 StartupNotify=true
 Terminal=false
 Type=Application
-Categories=Utilities
+Categories=Utility;
 
 # TODO: add mime type
 
