--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 ## Created by Anjuta
 
-SUBDIRS = data icons src po
+SUBDIRS = data icons mime src po
 
 tablerdocdir = ${prefix}/doc/tabler
 tablerdoc_DATA = \
