--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,7 +35,7 @@ tabler_SOURCES = \
 	main-window.vala relation.vala application.vala tabler-resources.c
 
 tabler_VALAFLAGS =  \
-	--pkg gtk+-3.0 --pkg gee-1.0 --pkg libxml-2.0 --pkg gio-2.0
+	--target-glib=2.38 --gresources tabler.gresource.xml --pkg gtk+-3.0 --pkg gee-1.0 --pkg libxml-2.0 --pkg gio-2.0
 
 tabler_LDFLAGS = \
 	-Wl,--export-dynamic
